--- a/index.html
+++ b/index.html
@@ -8,13 +8,29 @@
 
 <div class="header">
   <h1 class="banner">Broadway Design</h1>
+      <p><a class="content" href="#">Home</a></p>
+      <p><a class="content" href="#">Process</a></p>
+      <p><a class="content" href="#">Work</a></p>
+      <p><a class="content" href="#">Team</a></p>
+      <p><a class="content" href="#">Contact</a></p>
+ </div>
 
-      <p><a class="content" href="#home">Home</a></p>
-      <p><a class="content" href="#process">Process</a></p>
-      <p><a class="content" href="#work">Work</a></p>
-      <p><a class="content" href="#team">Team</a></p>
-      <p><a class="content" href="#contact">Contact</a></p>
+  <h2>Our process</h2>
+    <p> <img src="./resources/identify.svg">
+  <h3>Identify</h3>
+  <p>We focus on the most important details</p>
 
-</div>
+  <p> <img src="./resources/understand.svg">
+    <h3>Understand</h3>
+    <p>We study our projects inside out</p>
+
+    <p> <img src="./resources/execute.svg">
+      <h3>Execute</h3>
+      <p>We put everything we have into work</p>
+
+
+
+
+
 </body>
 </html>
