--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 
 <div class="header">
   <h1 class="banner">Broadway Design</h1>
-      <p><a class="content" href="#">Home</a></p>
-      <p><a class="content" href="#">Process</a></p>
-      <p><a class="content" href="#">Work</a></p>
-      <p><a class="content" href="#">Team</a></p>
-      <p><a class="content" href="#">Contact</a></p>
+      <p><a class="content" href="#"><strong>Home</strong></a></p>
+      <p><a class="content" href="#"><strong>Process</strong></a></p>
+      <p><a class="content" href="#"><strong>Work</strong></a></p>
+      <p><a class="content" href="#"><strong>Team</strong></a></p>
+      <p><a class="content" href="#"><strong>Contact</strong></a></p>
  </div>
 
   <h2>Our process</h2>
@@ -28,9 +28,21 @@
       <h3>Execute</h3>
       <p>We put everything we have into work</p>
 
+      <p><h3 class="design">Designed in New York</h3></p>
+        <p><h3>Portfolio</h3></p>
+          <p>Coming Soon</p>
+        <p><h3>Team</h3></p>
+          <p>We're Hiring!</p>
+        <h3>Contact</h3>
+          <p>Phone: (555)-555-555</p>
+          <p>test@example.com</p>
+          <p>Twitter: @test</p>
 
-
-
-
+      <p class="footer">Broadway 2017
+        <a class ="footer" href="#"><strong>Home</strong></a>
+        <a class ="footer" href="#"><strong>About</strong></a>
+        <a class="footer" href="#"><strong>Work</a>
+        <a class ="footer" href="#"><strong>Team</strong></a>
+        <a class ="footer" href="#"><strong>Contact</strong></a></p>
 </body>
 </html>
